[package]
name = "rsdsl_radvd"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnet = "2.7.1"
pnet_packet = "0.33.0"
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", version = "0.3.0", features = ["addr", "blocking", "status"], default-features = false }
signal-hook = "0.3.17"
socket2 = { version = "0.5.2", features = ["all"] }
thiserror = "1.0"
